Text correction and some spacing, may need further testing

--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,8 @@ hr.devicediv {
 }
 hr.largediv {
   width: 75%;
-  margin-top: 12.5em;
-  margin-bottom: 12.5em;
+  margin-top: 15em;
+  margin-bottom: 15em;
 }
 hr.smalldiv {
   width: 75%;
